--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,139 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/textView"
+        android:layout_width="198dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="106dp"
+        android:layout_marginTop="85dp"
+        android:layout_marginEnd="107dp"
+        android:gravity="center"
+        android:text="Sign Up "
+        android:textColor="@color/black"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="417dp"
+        android:layout_height="358dp"
+        android:layout_marginTop="50dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
+
+        <EditText
+            android:id="@+id/name_sign"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginEnd="63dp"
+            android:ems="10"
+            android:layout_margin="15dp"
+            android:hint="Enter Your Name"
+            android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:padding="10dp"
+
+            android:textSize="25sp" />
+
+        <EditText
+            android:id="@+id/email_sign"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="63dp"
+            android:ems="10"
+            android:layout_margin="15dp"
+
+            android:hint="Enter Your Email"
+            android:inputType="textPersonName"
+            android:padding="10dp"
+
+            android:textColor="@color/black"
+            android:textSize="25sp" />
+
+        <EditText
+            android:id="@+id/password_sign"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="63dp"
+            android:ems="10"
+            android:layout_margin="15dp"
+
+            android:hint="Enter Your Password"
+            android:inputType="textPersonName"
+            android:padding="10dp"
+
+            android:textColor="@color/black"
+            android:textSize="25sp" />
+
+        <EditText
+            android:id="@+id/phone_sign"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="63dp"
+            android:ems="10"
+            android:layout_margin="15dp"
+
+            android:padding="10dp"
+            android:hint="Enter Your Phone NO:"
+            android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:textSize="25sp" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/button_sign"
+        android:layout_width="300dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="65dp"
+        android:text="sign up"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
+    <ProgressBar
+        android:id="@+id/progressBar_sign"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="184dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="179dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/go_log" />
+
+    <TextView
+        android:id="@+id/go_log"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="63dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="63dp"
+        android:gravity="center"
+        android:text="Already have an account !"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_sign" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
